# MTBR-PENS

./: Readme.md  bot.py  install sql  persiapan.txt  trash.sql
.catkin_tools/profiles/default/: devel_collisions.txt
bekap/devel/: _setup_util.py
cpp_test/detectball-master/: detectball
devel/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
devel/include/face_detection/: face_detConfig.h  face_det_cudaConfig.h  face_det_dlibConfig.h  face_trackConfig.h
devel/include/rosserial_arduino/: TestRequest.h  TestResponse.h
devel/include/rosserial_mbed/: TestResponse.h
devel/include/rosserial_msgs/: RequestMessageInfoRequest.h  RequestMessageInfoResponse.h  RequestParamResponse.h  RequestServiceInfoRequest.h  TopicInfo.h
devel/lib/beginner_tutorials/: listener  talker
devel/lib/camera/: calibration  coba_pcl  img_publisher  img_stream_publisher  img_stream_subscriber  img_subscriber  offline_detection  open_camera  open_camera_1  tegal  trash_detection
devel/lib/detection/: open_camera
devel/lib/face_detection/: face_listener
devel/lib/kevinpkg/: detection1  head_pose  img_writer  show_fps  stereoCapture
devel/lib/omnirobot/: bicycle  fuzzy  fuzzybicycle  inverskinematic  odometry  pathfollowing
devel/lib/pkgconfig/: beginner_tutorials.pc  camera.pc  communication.pc  detection.pc  face_detection.pc  minorucam.pc  omnirobot.pc  rosserial_arduino.pc  rosserial_client.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_windows.pc  simulasi.pc  slave.pc  stereo.pc  telegram.pc  telegram_robot.pc
devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
install/: _setup_util.py
pekeg ku/camera/: CMakeLists.txt
pekeg ku/communication/: package.xml
pekeg ku/kevinpkg/: CMakeLists.txt
pekeg ku/slave/: CMakeLists.txt
src/camera/: CMakeLists.txt
src/communication/: CMakeLists.txt
src/kevinpkg/: CMakeLists.txt
src/simulasi/: CMakeLists.txt
src/slave/: CMakeLists.txt
src/slave/launch/: slave.launch
src/slave/src/: data_conversion.cpp  read_sensor.cpp  slave1_subscriber.cpp  subscriber.cpp
(+152 files in other folders)
